[gd_scene load_steps=7 format=2]

[ext_resource path="res://SpritesBlocagem/FundoBrancoBordaPreta.png" type="Texture" id=1]
[ext_resource path="res://SpritesBlocagem/MaqnaCostura.png" type="Texture" id=2]
[ext_resource path="res://SpritesBlocagem/Seta.png" type="Texture" id=3]
[ext_resource path="res://SpritesBlocagem/Bolsa.png" type="Texture" id=4]
[ext_resource path="res://Scripts/QuartoCostura.gd" type="Script" id=5]
[ext_resource path="res://Cenas/CenasPrefab/PalavrasPopUp.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 468.63, 301.128 )
scale = Vector2( 1.30407, 0.701479 )
texture = ExtResource( 1 )

[node name="MaquinaCostura" type="Button" parent="."]
margin_left = 380.164
margin_top = 349.14
margin_right = 617.164
margin_bottom = 580.14
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar2" type="Button" parent="."]
margin_left = 191.881
margin_top = 512.307
margin_right = 343.881
margin_bottom = 604.307
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CosturaPopUp" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CosturaPopUp"]
position = Vector2( 468.794, 302.929 )
scale = Vector2( 1.23192, 0.669833 )
texture = ExtResource( 1 )

[node name="Cores" type="Sprite" parent="CosturaPopUp"]
position = Vector2( 306.357, 184.866 )
scale = Vector2( 0.308553, 0.257869 )
texture = ExtResource( 1 )

[node name="FormatoRetalhos" type="Sprite" parent="CosturaPopUp"]
position = Vector2( 642.641, 178.935 )
scale = Vector2( 0.316562, 0.259529 )
texture = ExtResource( 1 )

[node name="Preview" type="Sprite" parent="CosturaPopUp"]
position = Vector2( 474.022, 361.297 )
scale = Vector2( 0.559503, 0.102568 )
texture = ExtResource( 1 )

[node name="Voltar" type="Button" parent="CosturaPopUp"]
margin_left = 191.881
margin_top = 512.307
margin_right = 343.881
margin_bottom = 604.307
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Costurar" type="Button" parent="CosturaPopUp"]
margin_left = 297.275
margin_top = 449.067
margin_right = 426.275
margin_bottom = 485.067
text = "Costurar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recomecar" type="Button" parent="CosturaPopUp"]
margin_left = 499.212
margin_top = 448.188
margin_right = 628.212
margin_bottom = 484.188
text = "Recome√ßar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bolsa" type="Button" parent="CosturaPopUp"]
margin_left = 444.2
margin_top = 145.249
margin_right = 548.2
margin_bottom = 255.249
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CosturaPopUp"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Verde" type="Button" parent="CosturaPopUp/Control"]
modulate = Color( 0, 1, 0.109804, 1 )
margin_left = 315.237
margin_top = 94.4854
margin_right = 827.237
margin_bottom = 904.485
rect_scale = Vector2( 0.09, 0.05 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vermelho" type="Button" parent="CosturaPopUp/Control"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 238.449
margin_top = 93.7363
margin_right = 750.449
margin_bottom = 903.736
rect_scale = Vector2( 0.09, 0.05 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Azul" type="Button" parent="CosturaPopUp/Control"]
modulate = Color( 0.0196078, 0.0823529, 1, 1 )
margin_left = 316.128
margin_top = 150.278
margin_right = 828.128
margin_bottom = 960.278
rect_scale = Vector2( 0.09, 0.05 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Amarelo" type="Button" parent="CosturaPopUp/Control"]
modulate = Color( 0.85098, 1, 0, 1 )
margin_left = 239.339
margin_top = 149.529
margin_right = 751.339
margin_bottom = 959.529
rect_scale = Vector2( 0.09, 0.05 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Laranja" type="Button" parent="CosturaPopUp/Control"]
modulate = Color( 0.901961, 0.596078, 0.0666667, 1 )
margin_left = 316.128
margin_top = 213.207
margin_right = 828.128
margin_bottom = 1023.21
rect_scale = Vector2( 0.09, 0.05 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Rosa" type="Button" parent="CosturaPopUp/Control"]
modulate = Color( 0.752941, 0.141176, 0.572549, 1 )
margin_left = 239.339
margin_top = 212.458
margin_right = 751.339
margin_bottom = 1022.46
rect_scale = Vector2( 0.09, 0.05 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
icon = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PalavrasPopUp" parent="CosturaPopUp" instance=ExtResource( 6 )]
visible = false
margin_left = 500.0
margin_right = 500.0
[connection signal="pressed" from="MaquinaCostura" to="." method="_on_MaquinaCostura_pressed"]
[connection signal="pressed" from="Voltar2" to="." method="_on_Voltar2_pressed"]
[connection signal="pressed" from="CosturaPopUp/Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="CosturaPopUp/Recomecar" to="." method="_on_Recomecar_pressed"]
[connection signal="pressed" from="CosturaPopUp/Bolsa" to="CosturaPopUp/PalavrasPopUp" method="_on_Bolsa_pressed"]
[connection signal="pressed" from="CosturaPopUp/Control/Verde" to="." method="_on_Verde_pressed"]
[connection signal="pressed" from="CosturaPopUp/Control/Vermelho" to="." method="_on_Vermelho_pressed"]
[connection signal="pressed" from="CosturaPopUp/Control/Azul" to="." method="_on_Azul_pressed"]
[connection signal="pressed" from="CosturaPopUp/Control/Amarelo" to="." method="_on_Amarelo_pressed"]
[connection signal="pressed" from="CosturaPopUp/Control/Laranja" to="." method="_on_Laranja_pressed"]
[connection signal="pressed" from="CosturaPopUp/Control/Rosa" to="." method="_on_Rosa_pressed"]
